overflow issue tackled

--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -83,3 +83,7 @@ a.article-title:hover {
   font-size: 2.5rem;
 }
 
+/* solve flex item overflow issue */
+.media-body {
+    min-width: 0;
+}
